@startuml
title Lock / Unlock User Class Diagram (/api/admin/users/{id}/deactivate or restore)
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide circle
hide empty methods
hide empty fields
note top
Generated from admin-lock-unlock-user-sequence.puml.
Classes and members are populated from current repository source when a matching code type exists.
end note

class UsersController <<frontend_controller>> {
  "- _apiClient : IVocaNovaApiClient"
  --
  "+ Deactivate(id: uint, returnUrl: stringNullable, cancellationToken: CancellationToken) : TaskOfIActionResult"
}

class AdminUsersController <<backend_controller>> {
  "- _adminUserService : IAdminUserService"
  --
  "+ Deactivate(id: uint, cancellationToken: CancellationToken) : TaskOfIActionResult"
}

class IAdminUserService <<service_interface>> {
  "+ GetUsersAsync(query: AdminUserQuery, cancellationToken: CancellationToken) : TaskOfResultOfPagedResultOfAdminUserSummaryModel"
  "+ GetUserDetailAsync(userId: uint, cancellationToken: CancellationToken) : TaskOfResultOfAdminUserDetailModel"
  "+ GetTestHistoryAsync(userId: uint, page: int, limit: int, cancellationToken: CancellationToken) : TaskOfResultOfPagedResultOfAdminUserTestSessionModel"
  "+ GetUserTopicsAsync(userId: uint, cancellationToken: CancellationToken) : TaskOfResultOfAdminUserTopicsModel"
  "+ DeactivateAsync(userId: uint, actorRole: string, cancellationToken: CancellationToken) : TaskOfResultOfbool"
  "+ RestoreAsync(userId: uint, actorRole: string, cancellationToken: CancellationToken) : TaskOfResultOfbool"
}

class AdminUserService <<service>> {
  "- _repository : IAdminUserRepository"
  "- _userProfileCache : IUserProfileCacheNullable"
  --
  "+ DeactivateAsync(userId: uint, actorRole: string, cancellationToken: CancellationToken) : TaskOfResultOfbool"
}

class User <<entity>> {
  "+ UserId : uint"
  "+ RoleId : uint"
  "+ Status : string"
  "+ LastLoginAt : DateTimeNullable"
  "+ CreatedAt : DateTime"
  "+ UpdatedAt : DateTime"
  "+ AuditLogs : ICollectionOfAuditLog"
  "+ OtpVerifications : ICollectionOfOtpVerification"
  "+ RefreshTokens : ICollectionOfRefreshToken"
  "+ Role : Role"
  "+ TestSessions : ICollectionOfTestSession"
  "+ UserAuth : UserAuthNullable"
}

class Role <<entity>> {
  "+ RoleId : uint"
  "+ RoleName : string"
  "+ Users : ICollectionOfUser"
}

class RefreshToken <<entity>> {
  "+ TokenId : uint"
  "+ UserId : uint"
  "+ TokenHash : string"
  "+ DeviceInfo : stringNullable"
  "+ IpAddress : stringNullable"
  "+ ExpiresAt : DateTime"
  "+ CreatedAt : DateTime"
  "+ RevokedAt : DateTimeNullable"
  "+ User : User"
}

class IAdminUserRepository <<repository_interface>> {
  "+ GetUsersAsync(query: AdminUserQuery, cancellationToken: CancellationToken) : TaskOfPagedResultOfAdminUserSummaryModel"
  "+ GetUserDetailAsync(userId: uint, cancellationToken: CancellationToken) : TaskOfAdminUserDetailModelNullable"
  "+ UserExistsAsync(userId: uint, cancellationToken: CancellationToken) : TaskOfbool"
  "+ GetUserTopicsAsync(userId: uint, cancellationToken: CancellationToken) : TaskOfAdminUserTopicsModel"
  "+ GetTestHistoryAsync(userId: uint, page: int, limit: int, cancellationToken: CancellationToken) : TaskOfPagedResultOfAdminUserTestSessionModel"
  "+ GetStatusTargetAsync(userId: uint, cancellationToken: CancellationToken) : TaskOfAdminUserStatusTargetNullable"
  "+ StageStatusAsync(userId: uint, status: string, updatedAt: DateTime, cancellationToken: CancellationToken) : TaskOfbool"
  "+ RevokeActiveRefreshTokensAsync(userId: uint, revokedAt: DateTime, cancellationToken: CancellationToken) : TaskOfint"
  "+ SaveChangesAsync(cancellationToken: CancellationToken) : Task"
}

class AdminUserRepository <<repository>> {
  "- _dbContext : VocaNovaDbContext"
  --
  "+ GetStatusTargetAsync(userId: uint, cancellationToken: CancellationToken) : TaskOfAdminUserStatusTarget"
  "+ StageStatusAsync(userId: uint, status: string, updatedAt: DateTime, cancellationToken: CancellationToken) : TaskOfBool"
  "+ RevokeActiveRefreshTokensAsync(userId: uint, revokedAt: DateTime, cancellationToken: CancellationToken) : TaskOfInt"
  "+ SaveChangesAsync(cancellationToken: CancellationToken) : Task"
}

class VocaNovaDbContext <<dbcontext>> {
  "+ AgeRanges : DbSetOfAgeRange"
  "+ AiGradingCaches : DbSetOfAiGradingCache"
  "+ AuditLogs : DbSetOfAuditLog"
  "+ EducationLevels : DbSetOfEducationLevel"
  "+ LearningPurposes : DbSetOfLearningPurpose"
  "+ Occupations : DbSetOfOccupation"
  "+ OtpVerifications : DbSetOfOtpVerification"
  "+ RefreshTokens : DbSetOfRefreshToken"
  "+ Regions : DbSetOfRegion"
  "+ Roles : DbSetOfRole"
  "+ TestAnswers : DbSetOfTestAnswer"
  "+ TestSessions : DbSetOfTestSession"
  --
  "+ SaveChangesAsync(cancellationToken: CancellationToken) : TaskOfInt"
}

class MySQL_Database <<database>> {

}
UsersController ..> AdminUsersController
AdminUserRepository ..> VocaNovaDbContext
VocaNovaDbContext ..> MySQL_Database
AdminUserRepository ..> User
AdminUserRepository ..> RefreshToken
IAdminUserService <|.. AdminUserService
AdminUsersController ..> IAdminUserService : DeactivateAsync()
IAdminUserRepository <|.. AdminUserRepository
AdminUserService ..> IAdminUserRepository : GetStatusTargetAsync()
AdminUserRepository ..> Role
@enduml
